[gd_scene load_steps=6 format=3 uid="uid://cf3ufk161aydw"]

[ext_resource type="Texture2D" uid="uid://cbc453xi4sivj" path="res://UI/Menu/asset/PNG/panelInset_beige.png" id="1_3qedg"]
[ext_resource type="Script" path="res://UI/Menu/main.gd" id="1_ineuo"]
[ext_resource type="Texture2D" uid="uid://brh3sesksn1ky" path="res://UI/Menu/asset/PNG/panel_blue.png" id="1_tvwde"]
[ext_resource type="Texture2D" uid="uid://co86eddxjynp5" path="res://UI/Menu/asset/PNG/buttonLong_grey.png" id="3_8grxa"]
[ext_resource type="Texture2D" uid="uid://dtc088wq2aosf" path="res://UI/Menu/asset/PNG/buttonLong_brown_pressed.png" id="4_rbk3m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ineuo")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.996078, 0.843137, 0, 1)

[node name="BluePanel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.5
offset_top = -213.5
offset_right = 160.5
offset_bottom = 213.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tvwde")

[node name="Label" type="Label" parent="BluePanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.997
anchor_bottom = 0.134
offset_right = -0.0370178
offset_bottom = 0.0459995
theme_override_font_sizes/font_size = 20
text = "Super awsome game"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="WhitePanel" type="TextureRect" parent="BluePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 34.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3qedg")

[node name="MarginContainer" type="MarginContainer" parent="BluePanel/WhitePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 9.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="BluePanel/WhitePanel/MarginContainer"]
layout_mode = 2

[node name="StartBtn" type="TextureButton" parent="BluePanel/WhitePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_8grxa")
texture_pressed = ExtResource("4_rbk3m")
stretch_mode = 5

[node name="Label" type="Label" parent="BluePanel/WhitePanel/MarginContainer/VBoxContainer/StartBtn"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Start Game"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SettingBtn" type="TextureButton" parent="BluePanel/WhitePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_8grxa")
texture_pressed = ExtResource("4_rbk3m")
stretch_mode = 5

[node name="Label" type="Label" parent="BluePanel/WhitePanel/MarginContainer/VBoxContainer/SettingBtn"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Setting
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="LevelSelectionBtn" type="TextureButton" parent="BluePanel/WhitePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_8grxa")
texture_pressed = ExtResource("4_rbk3m")
stretch_mode = 5

[node name="Label" type="Label" parent="BluePanel/WhitePanel/MarginContainer/VBoxContainer/LevelSelectionBtn"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Level Selection
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="QuitBtn" type="TextureButton" parent="BluePanel/WhitePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_8grxa")
texture_pressed = ExtResource("4_rbk3m")
stretch_mode = 5

[node name="Label" type="Label" parent="BluePanel/WhitePanel/MarginContainer/VBoxContainer/QuitBtn"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -29.5
offset_right = 24.5
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Quit
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="pressed" from="BluePanel/WhitePanel/MarginContainer/VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="BluePanel/WhitePanel/MarginContainer/VBoxContainer/SettingBtn" to="." method="_on_setting_btn_pressed"]
[connection signal="pressed" from="BluePanel/WhitePanel/MarginContainer/VBoxContainer/LevelSelectionBtn" to="." method="_on_level_selection_btn_pressed"]
[connection signal="pressed" from="BluePanel/WhitePanel/MarginContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
